# CACSLabeler

./: .gitignore  LICENSE  README.md
data/: .gitignore  CardiacAgatstonMeasuresLUT.ctbl  ColorCoding.xlsx  export.csv  export.json  settings.txt
data/XALabeler - Kopie/manager/action/data/: .gitignore
docs/: CACSLabeler.md  Tags for 3D-Slicer CACS pluginV02.docx  install_CACSLabeler.txt
src/ALLabeler/: CMakeLists.txt
src/ALLabeler/ALLabelerModule/: ALLabelerModule.py  CMakeLists.txt
src/CACSLabeler/: CMakeLists.txt  CardiacAgatstonMeasuresLUT.ctbl
src/CACSLabeler 5.x/: CMakeLists.txt
src/CACSLabeler 5.x/CACSLabeler/: CACSLabeler.py  CMakeLists.txt
src/CACSLabeler 5.x/CACSLabeler/CACSLabelerLib/: CalciumScore.py  SegmentationConverter.py  SegmentationProcessor.py  SettingsHandler.py  defaultSettings.json  labels.json
src/CACSLabeler 5.x/CACSLabeler/Resources/UI/: CACSLabeler.ui
src/CACSLabeler/CACSLabelerModule/: CACSLabelerModule.py  CACSTree.py  CMakeLists.txt  CardiacAgatstonMeasuresLUT.ctbl  Editor.py
src/CACSLabeler/CACSLabelerModule/CalciumScores/: Agatston.py  CalciumScoreBase.py  DensityScore.py  LesionVolume.py  NumLesions.py  VolumeScore.py
src/CACSTree/: CACSTree.py
src/CardiacCT/: CMakeLists.txt
src/CardiacCT/CardiacCT/: CMakeLists.txt  CardiacCT.py
src/XALabeler/: CMakeLists.txt
src/XALabeler/XALabelerModule/: CMakeLists.txt  CardiacAgatstonMeasuresLUT.ctbl  XALabelerModule.py
src/XATrust/: .gitignore  CMakeLists.txt
src/XATrust/XATrustModule/: CMakeLists.txt  Editor.py  XATrustModule.py
src/settings/: settings.py
(+1 files in other folders)
